src/main/kubernetes/jaeger-collector-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jaeger
  name: jaeger-collector
spec:
  ports:
    - name: 14268-tcp
      port: 14268
      protocol: TCP
      targetPort: 14268
  selector:
    deploymentconfig: jaeger
  sessionAffinity: None
  type: ClusterIP
