src/main/kubernetes/jaeger-query-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jaeger
  name: jaeger-query
spec:
  ports:
    - name: 16686-tcp
      port: 16686
      protocol: TCP
      targetPort: 16686
  selector:
    deploymentconfig: jaeger
  sessionAffinity: None
  type: ClusterIP
